objects/Region__c.object
<CustomObject>
    <description>Cross reference object to associate the countries (Accounts) with regions; will be used for both SAP integration as well as population for Prospect Accounts</description>
    <fields>
        <fullName>Comatrol_Distributor_Quote_Footer__c</fullName>
        <label>Comatrol Distributor Quote Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comatrol_OEM_Quote_Footer__c</fullName>
        <label>Comatrol OEM Quote Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contract_Region__c</fullName>
        <label>Contract Region</label>
        <picklist>
            <picklistValues>
                <fullName>ASEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <externalId>true</externalId>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Distributor_Quote_Footer__c</fullName>
        <description>for use in Quote PDF</description>
        <label>PS Distributor Quote Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OEM_Quote_Footer__c</fullName>
        <description>for use in the Quote PDF</description>
        <label>PS OEM Quote Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turolla_Distributor_Quote_Footer__c</fullName>
        <label>Turolla Distributor Quote Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Turolla_OEM_Quote_Footer__c</fullName>
        <label>Turolla OEM Quote Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Contract_Region__c</columns>
        <columns>Distributor_Quote_Footer__c</columns>
        <columns>OEM_Quote_Footer__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Country Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>